# c-examples-ipcv

./: CMakeLists.txt  README.md  adaptive_threshold.c  adaptive_threshold.cc  camshift_tracking.cc  canny.c  canny.cc  changedetection.c  changedetection.cc  colourquery.cc  colourshape.cc  compactness.cc  connected_components.cc  contour_tree_recognition.c  contour_tree_recognition.cc  contraststretch.c  contraststretch.cc  deinterlace.cc  dft_bandpass.c  dft_bandpass.cc  dft_butterworth_highpass.c  dft_butterworth_highpass.cc  dft_butterworth_lowpass.c  dft_butterworth_lowpass.cc  dft_highpass.c  dft_highpass.cc  dft_homomorphic.c  dft_homomorphic.cc  dft_lowpass.c  dft_lowpass.cc  displayimage.c  displayimage.cc  edge_based_segmentation.c  edge_based_segmentation.cc  edgedemo.c  edgedemo.cc  eigenimage_based_recognition.c  eigenimage_based_recognition.cc  erode_dilate.c  erode_dilate.cc  (+64 more)
